# ai-trends

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PROBLEMATIC_PACKAGES.md  README.md  TODOs.md  cursor-master-sequence.md  docker-compose.yml  on to fix rootDirectory error  pyproject.toml  requirements.txt  v0_TODOs.md  v1_TODOs.md  vibe-codingai-trend
.cursor/rules/: gen-proj-rules.mdc
backend/: .env.example
backend/alembic/: env.py
backend/alembic/versions/: 20251115_add_dup_group_meta.py  20251115_add_meta_timestamps.py  3c51146a302b_change_item_author_to_text.py  4a149ba61080_add_required_optional_keywords_to_watch_.py  9cc660270c3d_add_field_to_items.py  ea1fbe012a50_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: bookmarks.py  constants.py  groups.py  insights.py  items.py  persons.py  rss.py  sources.py  (+1 more)
backend/scripts/: analyze_backfill_results.py  analyze_collection_dates.py  check_db_status.py  check_field_status.py  check_json_items.py  check_source_316.py  check_techcrunch_date_range.py  check_test_results.py  collect_all_sources.py  deactivate_source.py  delete_old_openai_items.py  disable_source_316.py  export_groups_api_results.py  init_sources.py  investigate_group_mismatch.py  list_all_backfilled_items.py  list_sources.py  match_all_items_to_persons.py  run_backfill.py  show_actual_groups.py  show_group_details.py  summarize_backfill_items.py  test_feed_alternatives.py  update_items_field.py  verify_api_docs.py  verify_deployment.py  verify_items_in_window.py  worker.py
backend/tests/: conftest.py
docs/: DEBUGGING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_VERIFICATION.md  DEVELOPER_GUIDE.md  PRD_ai-trend.md  PROJECT_COMPLETION.md  RAILWAY_DEPLOYMENT.md  SETUP.md  USER_GUIDE.md  VERCEL_DEPLOYMENT.md  ai-trend_history1.md
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: client-layout.tsx  layout.tsx  page.tsx
frontend/components/: BookmarkCard.tsx  BookmarkModal.tsx  FieldTabs.tsx  ItemCard.tsx  Navigation.tsx  Pagination.tsx  PersonCard.tsx  SourcesSection.tsx  TagFilter.tsx  TimelineCard.tsx  WatchRulesSection.tsx
frontend/lib/: api.ts  constants.ts  debug.ts  error-boundary.tsx  providers.tsx  types.ts  validators.ts
(+130 files in other folders)
