[tool.poetry]
name = "ai-trend"
version = "0.1.0"
description = "RSS-based AI technology trend monitoring service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.0,<0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0,<0.28.0"}
sqlalchemy = ">=2.0.20,<2.1.0"
alembic = ">=1.12.0,<2.0.0"
psycopg2-binary = ">=2.9.7,<3.0.0"
feedparser = ">=6.0.10"
openai = ">=1.10.0,<2.0.0"
python-dotenv = ">=1.0.0"
apscheduler = ">=3.10.0,<4.0.0"
pydantic = ">=2.5.0,<3.0.0"
pydantic-settings = ">=2.1.0,<3.0.0"
httpx = ">=0.25.0,<0.27.0"
python-multipart = ">=0.0.6"
python-dateutil = ">=2.8.2"
beautifulsoup4 = ">=4.12.0,<5.0.0"
lxml = ">=5.1.0,<6.0.0"
scikit-learn = ">=1.3.0,<2.0.0"
numpy = ">=1.24.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "I001",  # isort (handled by isort)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

